@@ -1,5 +1,6 @@
-@comment $NetBSD: PLIST,v 1.2 2008/06/19 16:35:22 reed Exp $
+@comment $NetBSD: PLIST,v 1.3 2009/05/21 21:32:34 reed Exp $
 bin/dblatex
+man/man1/dblatex.1
 ${PYSITELIB}/dbtexmf/__init__.py
 ${PYSITELIB}/dbtexmf/__init__.pyc
 ${PYSITELIB}/dbtexmf/__init__.pyo
@@ -100,6 +101,18 @@ ${PYSITELIB}/dbtexmf/dblatex/unient.pyo
 ${PYSITELIB}/dbtexmf/xslt/4xslt.py
 ${PYSITELIB}/dbtexmf/xslt/4xslt.pyc
 ${PYSITELIB}/dbtexmf/xslt/4xslt.pyo
+${PYSITELIB}/dbtexmf/dblatex/xetex/__init__.py
+${PYSITELIB}/dbtexmf/dblatex/xetex/__init__.pyc
+${PYSITELIB}/dbtexmf/dblatex/xetex/__init__.pyo
+${PYSITELIB}/dbtexmf/dblatex/xetex/codec.py
+${PYSITELIB}/dbtexmf/dblatex/xetex/codec.pyc
+${PYSITELIB}/dbtexmf/dblatex/xetex/codec.pyo
+${PYSITELIB}/dbtexmf/dblatex/xetex/fontspec.py
+${PYSITELIB}/dbtexmf/dblatex/xetex/fontspec.pyc
+${PYSITELIB}/dbtexmf/dblatex/xetex/fontspec.pyo
+${PYSITELIB}/dbtexmf/dblatex/xetex/test1.py
+${PYSITELIB}/dbtexmf/dblatex/xetex/test1.pyc
+${PYSITELIB}/dbtexmf/dblatex/xetex/test1.pyo
 ${PYSITELIB}/dbtexmf/xslt/__init__.py
 ${PYSITELIB}/dbtexmf/xslt/__init__.pyc
 ${PYSITELIB}/dbtexmf/xslt/__init__.pyo
@@ -304,7 +317,176 @@ share/dblatex/xsl/verbatimco.xsl
 share/dblatex/xsl/version.xsl
 share/dblatex/xsl/xref.xsl
 share/doc/dblatex/manual.pdf
-man/man1/dblatex.1
+share/doc/dblatex/release-notes.pdf
+share/doc/dblatex/html/manual/sec-changelog.html
+share/doc/dblatex/html/manual/bi01.html
+share/doc/dblatex/html/manual/ch01s02.html
+share/doc/dblatex/html/manual/ch01s03.html
+share/doc/dblatex/html/manual/sec-style.html
+share/doc/dblatex/html/manual/ch01s05.html
+share/doc/dblatex/html/manual/ch01.html
+share/doc/dblatex/html/manual/ch02s02.html
+share/doc/dblatex/html/manual/ch02s03.html
+share/doc/dblatex/html/manual/ch02.html
+share/doc/dblatex/html/manual/re01.html
+share/doc/dblatex/html/manual/sec-custom-latex.html
+share/doc/dblatex/html/manual/sec-figinclude.html
+share/doc/dblatex/html/manual/ch03s04.html
+share/doc/dblatex/html/manual/ch03s05.html
+share/doc/dblatex/html/manual/ch03s06.html
+share/doc/dblatex/html/manual/ch03s07.html
+share/doc/dblatex/html/manual/ch03s08.html
+share/doc/dblatex/html/manual/ch03s09.html
+share/doc/dblatex/html/manual/sec-xref.html
+share/doc/dblatex/html/manual/ch03.html
+share/doc/dblatex/html/manual/sec-param-value.html
+share/doc/dblatex/html/manual/ch04s03.html
+share/doc/dblatex/html/manual/figure.caution.html
+share/doc/dblatex/html/manual/sec-texpost.html
+share/doc/dblatex/html/manual/sec-specs.html
+share/doc/dblatex/html/manual/ch04s07.html
+share/doc/dblatex/html/manual/sec-custom.html
+share/doc/dblatex/html/manual/ch05.html
+share/doc/dblatex/html/manual/sec-thanks.html
+share/doc/dblatex/html/manual/callout.linkends.hot.html
+share/doc/dblatex/html/manual/figure.important.html
+share/doc/dblatex/html/manual/figure.note.html
+share/doc/dblatex/html/manual/figure.tip.html
+share/doc/dblatex/html/manual/figure.warning.html
+share/doc/dblatex/html/manual/doc.lot.show.html
+share/doc/dblatex/html/manual/apas02.html
+share/doc/dblatex/html/manual/calloutlist.style.html
+share/doc/dblatex/html/manual/callout.markup.circled.html
+share/doc/dblatex/html/manual/co.linkends.show.html
+share/doc/dblatex/html/manual/imageobjectco.hide.html
+share/doc/dblatex/html/manual/titleabbrev.in.toc.html
+share/doc/dblatex/html/manual/doc.toc.show.html
+share/doc/dblatex/html/manual/make.single.year.ranges.html
+share/doc/dblatex/html/manual/toc.section.depth.html
+share/doc/dblatex/html/manual/colophon.tocdepth.html
+share/doc/dblatex/html/manual/dedication.tocdepth.html
+share/doc/dblatex/html/manual/preface.tocdepth.html
+share/doc/dblatex/html/manual/refentry.tocdepth.html
+share/doc/dblatex/html/manual/apas03.html
+share/doc/dblatex/html/manual/alt.use.html
+share/doc/dblatex/html/manual/tex.math.in.alt.html
+share/doc/dblatex/html/manual/apas04.html
+share/doc/dblatex/html/manual/refentry.numbered.html
+share/doc/dblatex/html/manual/apas05.html
+share/doc/dblatex/html/manual/doc.pdfcreator.show.html
+share/doc/dblatex/html/manual/funcsynopsis.decoration.html
+share/doc/dblatex/html/manual/make.year.ranges.html
+share/doc/dblatex/html/manual/apas06.html
+share/doc/dblatex/html/manual/refentry.generate.name.html
+share/doc/dblatex/html/manual/funcsynopsis.style.html
+share/doc/dblatex/html/manual/function.parens.html
+share/doc/dblatex/html/manual/variablelist.term.separator.html
+share/doc/dblatex/html/manual/refentry.xref.manvolnum.html
+share/doc/dblatex/html/manual/apas07.html
+share/doc/dblatex/html/manual/newtbl.autowidth.html
+share/doc/dblatex/html/manual/newtbl.bgcolor.thead.html
+share/doc/dblatex/html/manual/newtbl.default.colsep.html
+share/doc/dblatex/html/manual/newtbl.default.rowsep.html
+share/doc/dblatex/html/manual/newtbl.format.tbody.html
+share/doc/dblatex/html/manual/newtbl.format.tfoot.html
+share/doc/dblatex/html/manual/newtbl.format.thead.html
+share/doc/dblatex/html/manual/newtbl.use.hhline.html
+share/doc/dblatex/html/manual/table.default.position.html
+share/doc/dblatex/html/manual/table.in.float.html
+share/doc/dblatex/html/manual/table.title.top.html
+share/doc/dblatex/html/manual/apas08.html
+share/doc/dblatex/html/manual/latex.hyperparam.html
+share/doc/dblatex/html/manual/olink.params.html
+share/doc/dblatex/html/manual/apas09.html
+share/doc/dblatex/html/manual/term.breakline.html
+share/doc/dblatex/html/manual/apas10.html
+share/doc/dblatex/html/manual/apas11.html
+share/doc/dblatex/html/manual/citation.default.style.html
+share/doc/dblatex/html/manual/qanda.defaultlabel.html
+share/doc/dblatex/html/manual/figure.title.top.html
+share/doc/dblatex/html/manual/apas12.html
+share/doc/dblatex/html/manual/biblioentry.item.separator.html
+share/doc/dblatex/html/manual/apas13.html
+share/doc/dblatex/html/manual/citation.natbib.options.html
+share/doc/dblatex/html/manual/citation.natbib.use.html
+share/doc/dblatex/html/manual/latex.bibfiles.html
+share/doc/dblatex/html/manual/latex.biblio.output.html
+share/doc/dblatex/html/manual/latex.biblio.style.html
+share/doc/dblatex/html/manual/latex.bibwidelabel.html
+share/doc/dblatex/html/manual/glossterm.auto.link.html
+share/doc/dblatex/html/manual/equation.default.position.html
+share/doc/dblatex/html/manual/annotation.support.html
+share/doc/dblatex/html/manual/doc.section.depth.html
+share/doc/dblatex/html/manual/literal.layout.options.html
+share/doc/dblatex/html/manual/filename.as.url.html
+share/doc/dblatex/html/manual/example.default.position.html
+share/doc/dblatex/html/manual/figure.default.position.html
+share/doc/dblatex/html/manual/apas14.html
+share/doc/dblatex/html/manual/mediaobject.caption.style.html
+share/doc/dblatex/html/manual/literal.lines.showall.html
+share/doc/dblatex/html/manual/literal.width.ignore.html
+share/doc/dblatex/html/manual/imagedata.default.scale.html
+share/doc/dblatex/html/manual/monoseq.hyphenation.html
+share/doc/dblatex/html/manual/monoseq.small.html
+share/doc/dblatex/html/manual/pdf.annot.options.html
+share/doc/dblatex/html/manual/seg.item.separator.html
+share/doc/dblatex/html/manual/set.book.num.html
+share/doc/dblatex/html/manual/show.comments.html
+share/doc/dblatex/html/manual/ulink.footnotes.html
+share/doc/dblatex/html/manual/ulink.show.html
+share/doc/dblatex/html/manual/imagedata.boxed.html
+share/doc/dblatex/html/manual/doc.alignment.html
+share/doc/dblatex/html/manual/apas15.html
+share/doc/dblatex/html/manual/imagedata.file.check.html
+share/doc/dblatex/html/manual/doc.publisher.show.html
+share/doc/dblatex/html/manual/doc.collab.show.html
+share/doc/dblatex/html/manual/doc.layout.html
+share/doc/dblatex/html/manual/draft.watermark.html
+share/doc/dblatex/html/manual/draft.mode.html
+share/doc/dblatex/html/manual/latex.output.revhistory.html
+share/doc/dblatex/html/manual/latex.class.article.html
+share/doc/dblatex/html/manual/latex.class.book.html
+share/doc/dblatex/html/manual/latex.class.options.html
+share/doc/dblatex/html/manual/latex.encoding.html
+share/doc/dblatex/html/manual/latex.unicode.use.html
+share/doc/dblatex/html/manual/cjk.font.html
+share/doc/dblatex/html/manual/apas16.html
+share/doc/dblatex/html/manual/latex.babel.language.html
+share/doc/dblatex/html/manual/xetex.font.html
+share/doc/dblatex/html/manual/apas17.html
+share/doc/dblatex/html/manual/korean.package.html
+share/doc/dblatex/html/manual/latex.babel.use.html
+share/doc/dblatex/html/manual/apas18.html
+share/doc/dblatex/html/manual/sec-params.html
+share/doc/dblatex/html/manual/index.html
+share/doc/dblatex/html/manual/processus.png
+share/doc/dblatex/html/manual/img-tbl-color.png
+share/doc/dblatex/html/manual/manual.css
+share/doc/dblatex/html/manual/figures/eq1.png
+share/doc/dblatex/html/manual/figures/eq4.png
+share/doc/dblatex/html/release-notes/sec-changes-0210.html
+share/doc/dblatex/html/release-notes/sec-changes-029.html
+share/doc/dblatex/html/release-notes/sec-changes-028.html
+share/doc/dblatex/html/release-notes/sec-changes-027.html
+share/doc/dblatex/html/release-notes/sec-changes-026.html
+share/doc/dblatex/html/release-notes/sec-changes-025.html
+share/doc/dblatex/html/release-notes/sec-changes-024.html
+share/doc/dblatex/html/release-notes/sec-changes-023.html
+share/doc/dblatex/html/release-notes/sec-changes-022.html
+share/doc/dblatex/html/release-notes/sec-changes-021.html
+share/doc/dblatex/html/release-notes/sec-changes-020.html
+share/doc/dblatex/html/release-notes/sec-changes-02pre.html
+share/doc/dblatex/html/release-notes/sec-changes-0110.html
+share/doc/dblatex/html/release-notes/sec-changes-019.html
+share/doc/dblatex/html/release-notes/sec-changes-018.html
+share/doc/dblatex/html/release-notes/sec-changes-017.html
+share/doc/dblatex/html/release-notes/sec-changes-016.html
+share/doc/dblatex/html/release-notes/sec-changes-015.html
+share/doc/dblatex/html/release-notes/sec-changes-0141.html
+share/doc/dblatex/html/release-notes/sec-changes-014.html
+share/doc/dblatex/html/release-notes/changes-txt.html
+share/doc/dblatex/html/release-notes/index.html
+share/doc/dblatex/html/release-notes/manual.css
 @dirrm share/doc/dblatex
 @dirrm share/dblatex/xsl/mathml2
 @dirrm share/dblatex/xsl/common
@@ -321,8 +503,14 @@ man/man1/dblatex.1
 @dirrm share/dblatex/latex/contrib/db2latex
 @dirrm share/dblatex/latex/contrib
 @dirrm share/dblatex/latex
+@dirrm share/doc/dblatex/html/release-notes
+@dirrm share/doc/dblatex/html/manual/figures
+@dirrm share/doc/dblatex/html/manual
+@dirrm share/doc/dblatex/html
+@dirrm share/doc/dblatex
 @dirrm share/dblatex
 @dirrm ${PYSITELIB}/dbtexmf/xslt
+@dirrm ${PYSITELIB}/dbtexmf/dblatex/xetex
 @dirrm ${PYSITELIB}/dbtexmf/dblatex/grubber
 @dirrm ${PYSITELIB}/dbtexmf/dblatex
 @dirrm ${PYSITELIB}/dbtexmf/core
